force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/tkt_Ticket_Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <description>TNOX: Defines automatic ticket routing rules. Matches tickets by category and/or priority and assigns them to a queue or user. Rules are evaluated in priority order; first match wins.</description>
    <label>Ticket Routing Rule</label>
    <pluralLabel>Ticket Routing Rules</pluralLabel>
</CustomObject>