force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/fields/Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Queue__c</fullName>
    <description>TNOX: Developer Name of the Queue to assign tickets to.</description>
    <label>Assign To Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>