force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/fields/Assign_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_User__c</fullName>
    <description>TNOX: User ID to assign tickets to. Takes precedence over Queue if both specified.</description>
    <label>Assign To User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>