force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TNOX: Controls whether this routing rule is evaluated. Inactive rules are ignored during ticket routing.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>