force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNOX: If true, this rule is used when no other rules match.</description>
    <label>Is Default Rule</label>
    <type>Checkbox</type>
</CustomField>