force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/fields/Match_Category__c.field-meta.xml
<CustomField>
    <fullName>Match_Category__c</fullName>
    <description>TNOX: Category value to match. Leave blank to match any.</description>
    <label>Match Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>