force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/fields/Match_Priority__c.field-meta.xml
<CustomField>
    <fullName>Match_Priority__c</fullName>
    <description>TNOX: Priority value to match. Leave blank to match any.</description>
    <label>Match Priority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>