force-app/main/default/objects/tkt_Ticket_Routing_Rule__mdt/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <defaultValue>50</defaultValue>
    <description>TNOX: Lower numbers are evaluated first. Use 100+ for default/fallback rules.</description>
    <label>Priority Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>